--- a/resume.html
+++ b/resume.html
@@ -62,7 +62,7 @@
         <ol>
         	<li>1.C-Langauge</li>
         	<li>2.Java</li>
-        	<li>Front-end Developer(HTML,CSS,Java Script,Jquery)</li>
+        	<li>Front-end Developer(HTML,CSS,Java Script,JQUERY)</li>
         </ol>
         <p>*Good in oral and written communication</p>
         <h2>Achievements</h2>
