--- a/Cards.html
+++ b/Cards.html
@@ -20,7 +20,7 @@
                 <hr>
                 <h2>K.Maneesha</h2>
                 <p>Charted Accountant</p>
-                <p>maneeshaammulu1@gmail.com</p>
+                <p>maneeshaamulu1@gmail.com</p>
                 <a href="resume.html">View Profile</a>
             </div>
             <div class="card">
