--- a/Cards.html
+++ b/Cards.html
@@ -12,7 +12,7 @@
                 <h2>K.Baby Ramya</h2>
                 <p>Computer Science Engineer</p>
                 <p>manuramya888@gmail.com</p>
-                <a href="resume.html">View Profile</a>
+                <a href="index1.html">View Profile</a>
 
             </div>
             <div class="card">
@@ -21,7 +21,7 @@
                 <h2>K.Maneesha</h2>
                 <p>Charted Accountant</p>
                 <p>maneeshaamulu1@gmail.com</p>
-                <a href="resume.html">View Profile</a>
+                <a href="index1.html">View Profile</a>
             </div>
             <div class="card">
                 <img src="profile.png" alt="profile">
@@ -29,7 +29,7 @@
                 <h2>A.Vamsi Krishna</h2>
                 <p>Charted Accountant</p>
                 <p>vamsikrishna0128@gmail.com</p>
-                <a href="resume.html">View Profile</a>
+                <a href="index1.html">View Profile</a>
 
             </div>
         </section>
